# rustcian_blog

./: .dockerignore  .env.local.example  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  architecture.md  docker-compose.yml  plan.md  talk.md
.cargo/: audit.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: pre-push-check.sh
.claude/skills/: blog-status.md  content-deploy.md  tf-plan.md
.github/workflows/: ci.yml  content-deploy.yml  deploy-dev.yml  deploy.yml  search-index.yml  security.yml  static-site.yml
application/analytics/: Cargo.toml
application/analytics/src/: config.rs  lib.rs  main.rs  presentation.rs  store.rs  table.rs
application/backend/: Cargo.toml
application/backend/src/: ai.rs  analytics_reader.rs  analytics_writer.rs  auth.rs  blob.rs  cloudflare.rs  comment_store.rs  config.rs  lib.rs  main.rs  notification.rs  observability.rs  presentation.rs  search.rs  search_storage.rs  state.rs  static_site.rs  storage.rs  table.rs  translator.rs
application/backend/tests/snapshots/: static_build_manifest.json  static_rss.xml  static_search.json  static_sitemap.xml
application/core/: Cargo.toml
application/core/src/: lib.rs
application/core/src/application/: usecase.rs
application/core/src/domain/: admin.rs  ai.rs  comment.rs  error.rs  mod.rs  notification.rs  post.rs  repository.rs  search.rs  static_site.rs
application/frontend/: Cargo.toml
application/frontend/src/: lib.rs  main.rs
application/search/: Cargo.toml
application/search-indexer/: Cargo.toml
application/search-indexer/src/: main.rs
application/search/src/: lib.rs
blog/: blog.md
content/metadata/: hello-rustacian-blog.json
content/posts/: actix-and-leptos.md  hello-rustacian-blog.md
content/posts/actix-and-leptos/: meta.yml  post.md  request-latency.csv
content/posts/draft-azure-transition/: meta.yml  post.md
content/posts/hello-rustacian-blog/: meta.yml  post.md
sample/rusted-ca/: Cargo.toml
terraform/: .gitignore  README.md  main.tf  outputs.tf  variables.tf
terraform/modules/app/: main.tf  outputs.tf  variables.tf
terraform/modules/comms/: main.tf  outputs.tf  variables.tf
terraform/modules/keyvault/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/openai/: main.tf  outputs.tf  variables.tf
terraform/modules/registry/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf
v1/: plan.md  spec.md  tasks.md
v1.5/: plan.md  spec.md  tasks.md
v2/: plan.md  spec.md  tasks.md
v3/: azure-boundaries.md  plan.md  spec.md  tasks.md
v3.5/: content_workflow.md  plan.md  tasks.md
v4/: azure-boundaries.md  plan.md  spec.md  tasks.md
v4.5/: plan.md  tasks.md
v5/: idea.md  plan.md  tasks.md
v5.5/: plan.md  tasks.md
v6/: plan.md  spec.md  tasks.md
v6.5/: tasks.md
