[package]
name = "rustacian_blog_analytics"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rustacian_blog_analytics"
path = "src/main.rs"

[dependencies]
actix-web.workspace = true
chrono.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
urlencoding.workspace = true
base64 = "0.22.1"
hmac = "0.12.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10.9"
