[package]
name = "rustacian_blog_search"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = { version = "0.25", default-features = false, features = ["mmap"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
